# ultralight-bindings-kt

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
buildSrc/src/main/kotlin/: ultralight-publishing.gradle.kts
native/: .gitignore  CMakeLists.txt
native/scripts/: rename_libs.py
native/src/: Library.cpp  Refs.cpp  Refs.h
native/src/jni/: JniEnv.cpp  JniEnv.h  JniRef.h  JniUtils.h
native/src/ultralight/: Jni.h
native/src/util/: JniMacros.cpp  JniMacros.h  JniUtil.h  JsUtil.h  UlUtil.h  Util.h
native/src/wrapper/: Clipboard.cpp  Clipboard.h  Filesystem.cpp  Filesystem.h  LoadListener.cpp  LoadListener.h  Logger.cpp  Logger.h  ViewListener.cpp  ViewListener.h
platform/: build.gradle.kts
shared/: build.gradle.kts
shared/src/main/kotlin/io/github/nilsen84/ultralight/: AwtClipboard.kt  ResourceFileSystem.kt  UltralightBindings.kt  UltralightKey.kt  UltralightLoader.kt
shared/src/main/kotlin/io/github/nilsen84/ultralight/internal/: BuiltinResourceFilesystem.kt  NativeUtils.kt  UltralightJni.kt
shared/src/main/kotlin/io/github/nilsen84/ultralight/lwjgl/: LwjglKeyMapper.kt
